--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=User-Management
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=.
+sonar.sources=https://sonarcloud.io/project/configuration?analysisMode=GitHubActions&id=fanglong-it_User-Management
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
