--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,11 +2,12 @@ sonar.projectKey=fanglong-it_User-Management
 sonar.organization=fanglong-it-1
 
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=User-Management
-sonar.projectVersion=1.0
+#sonar.projectName=User-Management
+#sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=https://sonarcloud.io/project/configuration?analysisMode=GitHubActions&id=fanglong-it_User-Management
+#sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-sonar.sourceEncoding=UTF-8
+#sonar.sourceEncoding=UTF-8
+sonar.java.binaries=.
